# MadTracker3

./: .gitignore  .travis.yml  CMakeLists.txt  MT3Config.h  README  README.md
Headers/: MTXASM.inc  MTXAudio.h  MTXAutomation.h  MTXControls.h  MTXDisplay.h  MTXEffect.cpp  MTXEffect.h  MTXExtension.h  MTXGUI.h  MTXObject.h  MTXOscillator.h  MTXPattern.h  MTXSkin.h  MTXSystem.h  MTXSystem2.cpp  MTXSystem2.h  MTXTrack.h  MTXWrapper.h
Interface/: MT3RES.h  MTObjects.mtr  MTObjectsRES.h  MTSystemRES.h
MT3/: MT3.cpp  MT3.dsp  MT3.rc  MTConsole.cpp  MTConsole.h  MTData.cpp  MTData.h  MTExtensions.cpp  MTExtensions.h  MTInterface.cpp  MTInterface.h  MTWC_Main.cpp  MTWC_Main.h  MTWC_Main2.cpp  MTWC_Main2.h  ToDo.txt  resource.h
MTAI/: MTAI.cpp  MTAI.def  MTAI.dsp  MTAI.h  MTAI1.cpp  MTAI_main.cpp
MTAudio/: MTAudio.cpp  MTAudio.def  MTAudio.dsp  MTAudio1.cpp  MTAudio1.h  MTAudio2.cpp  MTAudio2.h  MTAudioDevice.h  MTDevDSP.cpp  MTDevDSP.h  MTDirectSound.cpp  MTDirectSound.h  MTWaveOut.cpp  MTWaveOut.h  ToDo.txt
MTDSP/: MTBuffer.asm  MTBufferASM.cpp  MTBufferASM.h  MTCatmullASM.cpp  MTCatmullASM.h  MTDSP.cpp  MTDSP.def  MTDSP.dsp  MTDSP.h  MTDSP1.cpp  MTDSP1.h  MTDSPASM.inc  MTDSP_main.cpp  MTFilterASM.cpp  MTFilterASM.h  MTResampling.asm  MTResamplingASM.cpp  MTResamplingASM.h  MTShaper.cpp  MTShaper.h  ToDo.txt
MTDisplay/: MTBitmap.h  MTDXBitmap.cpp  MTDXBitmap.h  MTDXDevice.cpp  MTDXDevice.h  MTDecode.cpp  MTDecode.h  MTDisplay.cpp  MTDisplay.def  MTDisplay.dsp  MTDisplay.h  MTDisplay1.cpp  MTDisplayASM.cpp  MTDisplayASM.h  MTDisplayDevice.cpp  MTDisplayDevice.h  MTDisplayMMX.cpp  MTDisplayMMX.h  MTDisplay_main.cpp  MTGDIBitmap.cpp  MTGDIBitmap.h  MTGDIDevice.cpp  MTGDIDevice.h  ToDo.txt
MTGUI/: Font.txt  MTButton.cpp  MTButton.h  MTCheckBox.cpp  MTCheckBox.h  MTControl.cpp  MTControl.h  MTCustControls.cpp  MTCustControls.h  MTDesktop.cpp  MTDesktop.h  MTEdit.cpp  MTEdit.h  MTGUI.cpp  MTGUI.def  MTGUI.dsp  MTGUI1.cpp  MTGUI1.h  MTGUITools.cpp  MTGUITools.h  MTItems.cpp  MTItems.h  MTLabel.cpp  MTLabel.h  MTMainMenu.h  MTOSSkin.cpp  MTOSSkin.h  MTOSWindow.cpp  MTOSWindow.h  MTPanel.cpp  MTPanel.h  MTProgress.cpp  MTProgress.h  MTSign.cpp  MTSign.h  MTSkin.cpp  MTSkin.h  MTSysControls.cpp  MTSysControls.h  MTTabControl.cpp  (+11 more)
MTObjects/: MTAutomation.cpp  MTAutomation.h  MTColumns.cpp  MTColumns.h  MTDelay.cpp  MTDelay.h  MTEffect.cpp  MTEffect.h  MTFilter.cpp  MTFilter.h  MTGenerator.cpp  MTGenerator.h  MTGraphs.cpp  MTGraphs.h  MTIOInstrument.cpp  MTIOInstrument.h  MTIOModule_MT2.cpp  MTIOModule_MT2.h  MTIOOscillator.cpp  MTIOOscillator.h  MTInstrEditor.cpp  MTInstrEditor.h  MTInstrument.cpp  MTInstrument.h  MTModule.cpp  MTModule.h  MTNode.h  MTObject.cpp  MTObject.h  MTObjects.cpp  MTObjects.def  MTObjects.dsp  MTObjects1.cpp  MTObjects1.h  MTObjects2.cpp  MTObjects2.h  MTObjectsASM.cpp  MTObjectsASM.h  MTOscillator.cpp  MTOscillator.h  (+17 more)
MTSystem/: MTBase64.cpp  MTBase64.h  MTConfig.cpp  MTConfig.h  MTFile.cpp  MTFile.h  MTHTTPFile.cpp  MTHTTPFile.h  MTInternet.cpp  MTInternet.h  MTKernel.cpp  MTKernel.h  MTLocalFile.cpp  MTLocalFile.h  MTMD5.cpp  MTMD5.h  MTMemoryFile.cpp  MTMemoryFile.h  MTMiniConfig.cpp  MTMiniConfig.h  MTResources.cpp  MTResources.h  MTSocket.cpp  MTSocket.h  MTStructures.cpp  MTStructures.h  MTSystem.cpp  MTSystem.def  MTSystem.dsp  MTSystem.h  MTSystem1.cpp  MTSystem1.h  MTSystem_main.cpp  MTXML.cpp  MTXML.h  ToDo.txt  strnatcmp.cpp  strnatcmp.h
MinGW/: Makefile
Unix/: MadTracker3  Makefile
in_mt3/: MTPluginInterface.cpp  MTPluginInterface.h  MTWinamp1.cpp  in_mt3.cpp  in_mt3.dsp  in_mt3.h  plugin.h
include/: gen_minmax.h
include/MTXAPI/: MTXASM.inc  MTXAudio.h  MTXAutomation.h  MTXControls.h  MTXDSP.h  MTXDisplay.h  MTXEffect.h  MTXExtension.h  MTXGUI.h  MTXGUITypes.h  MTXInput.h  MTXInstrument.h  MTXModule.h  MTXNode.h  MTXObject.h  MTXObjects.h  MTXOscillator.h  MTXPattern.h  MTXSkin.h  MTXSystem.h  MTXSystem2.h  MTXTrack.h  MTXWrapper.h
include/MTXAPI/RES/: MT3RES.h  MTObjectsRES.h  MTSystemRES.h
include/MTXAPI/config/: MT3Config.h
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
